--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "main": "main.js",
   "scripts": { "start": "node main.js" },
   "dependencies": {
-    "canvas": "^2.11.2",
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "qrcode": "^1.5.3",
-    "ws": "^8.18.0"
+     "canvas": "^2.11.2",
+     "express": "^4.18.2",
+     "multer": "^1.4.5-lts.1",
+     "qrcode": "^1.5.3",
+     "ws": "^8.18.0",
+     "pdf417-generator": "*"
   }
 }
